// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageGovernance disables proposal creation if not connected 1`] = `
<div
  class="tm-page governance"
  data-title="Governance"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  1,337.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  1,337.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmos…xxn9
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            >
              <div
                class="tab"
              >
                <router-link-stub
                  to="[object Object]"
                >
                  Proposals
                </router-link-stub>
              </div>
              <div
                class="tab"
              >
                <router-link-stub
                  to="[object Object]"
                >
                  Parameters
                </router-link-stub>
              </div>
            </div>
             
            <button
              class="tm-btn"
              disabled="disabled"
              id="propose-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Connecting...
                </span>
              </span>
            </button>
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a>
              <i
                class="search material-icons"
              >
                search
              </i>
            </a>
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <!---->
     
    <!---->
     
    <router-view-stub />
  </main>
</div>
`;

exports[`PageGovernance has the expected html structure 1`] = `
<div
  class="tm-page governance"
  data-title="Governance"
>
  <header
    class="tm-page-header"
  >
    <div
      class="tm-page-header-container"
    >
      <div
        class="tm-page-header-text"
      >
        <!---->
         
        <!---->
         
        <div
          class="tm-page-header-body"
        >
          <div
            class="header-balance"
          >
            <div
              class="top"
            >
              <div
                class="icon-container"
              >
                <img
                  class="icon"
                  src="~assets/images/cosmos-logo.png"
                />
              </div>
               
              <div
                class="total-atoms top-section"
              >
                <h3>
                  Total STAKE
                </h3>
                 
                <h2
                  class="total-atoms__value"
                >
                  1,351.0000…
                </h2>
              </div>
               
              <div
                class="unbonded-atoms top-section"
              >
                <h3>
                  Available STAKE
                </h3>
                 
                <h2>
                  1,337.0000…
                </h2>
              </div>
            </div>
             
            <div
              class="short-bech32"
            >
              <div
                class="address"
                id="address"
              >
                
    cosmos…xxn9
  
              </div>
               
              <div
                class="copied"
              >
                <i
                  class="material-icons"
                >
                  check
                </i>
                <span>
                  Copied
                </span>
              </div>
            </div>
             
            <div
              class="tabs"
            >
              <div
                class="tab"
              >
                <router-link-stub
                  to="[object Object]"
                >
                  Proposals
                </router-link-stub>
              </div>
              <div
                class="tab"
              >
                <router-link-stub
                  to="[object Object]"
                >
                  Parameters
                </router-link-stub>
              </div>
            </div>
             
            <button
              class="tm-btn"
              id="propose-btn"
            >
              <span
                class="tm-btn__container tm-btn--primary"
              >
                <!---->
                <span
                  class="tm-btn__value"
                >
                  Create Proposal
                </span>
              </span>
            </button>
          </div>
           
          <div
            class="tm-tool-bar"
          >
            <a
              class="back"
              disabled="disabled"
            >
              <i
                class="material-icons"
              >
                arrow_back
              </i>
            </a>
             
            <a>
              <i
                class="search material-icons"
              >
                search
              </i>
            </a>
            <a
              class="help"
            >
              <i
                class="material-icons"
              >
                help_outline
              </i>
            </a>
             
            <router-link-stub
              id="settings"
              to="/preferences"
            >
              <i
                class="material-icons"
              >
                settings
              </i>
            </router-link-stub>
            <a
              id="signOut-btn"
            >
              <i
                class="material-icons"
              >
                exit_to_app
              </i>
            </a>
          </div>
        </div>
      </div>
       
      <menu
        class="tm-page-header-menu"
      >
        <div />
      </menu>
    </div>
  </header>
   
  <main
    class="tm-page-main"
  >
     
    <!---->
     
    <!---->
     
    <router-view-stub />
  </main>
</div>
`;
